add font type reference link

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="styles/main.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" href="https://use.typekit.net/vtx6nlc.css">
+        <link href="calculator.css" rel="stylesheet" type="text/css" />
+        <link href="https://use.typekit.net/vtx6nlc.css" rel="stylesheet">
     </head>
     <body>
         <div class="calculator">
-            <p id="title">ASHIO SP5</p>
+            <p id="ctitle">CASHIO SP5</p>
             <p id="tagline">electronic calculator</p>
             <input type="text" disabled="disabled" id="answer"/>
             <div class="row">
