fix typo in title class

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="calculator">
-            <p id="ctitle">CASHIO SP5</p>
+            <p id="title">CASHIO SP5</p>
             <p id="tagline">electronic calculator</p>
             <input type="text" disabled="disabled" id="answer"/>
             <div class="row">
