--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
             <p id="tagline">electronic calculator</p>
             <input type="text" disabled="disabled" id="answer"/>
             <div class="row">
-                <button class="ctrl">AC</button>
+                <button data-action="clear">AC</button>
             </div>
             <div class="row">
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button>/</button>
+                <button class="key--operator" data-action="divide">/</button>
             </div>
             <div class="row">
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
-                <button>*</button>
+                <button class="key--operator" data-action="multiply">*</button>
             </div>
             <div class="row">
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button>-</button>
+                <button class="key--operator" data-action="subtract">-</button>
             </div>
             <div class="row">
                 <button>0</button>
-                <button>.</button>
-                <button>=</button>
-                <button>+</button>
+                <button data-action="decimal">.</button>
+                <button class="key--equal" data-action="calculate">=</button>
+                <button class="key--operator" data-action="add">+</button>
             </div>
         </div>
     </body>
