--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="calculator.css" rel="stylesheet" type="text/css" />
         <link href="https://use.typekit.net/vtx6nlc.css" rel="stylesheet">
+        <script src="calculator.js"></script>
     </head>
     <body>
         <div class="calculator">
